New Pages in it

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>Hello,Calvin-star</h1>
+<!--Calvin-star Studio出品，制作 by 一叶知秋是BAKA-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>欢迎来到Calvin-star！</title>
+        <link rel="stylesheet" type="text/css" href="pagestyle.css">
+        <script src="pgjs.js"></script>
+    </head>
+    <body>
+        <!--导航栏-->
+        <ul>
+            <li><a href="#home">主页</a></li>
+            <li><a href="news.html">新闻</a></li>
+        </ul>
+        <!--内容-->
+        <center><div id="type">
+            <br>
+            <h1>Calvin-star Studio</h1>
+            <p>Minecraft工作室</p>
+            <br>
+        </div></center>
+        <center><div id="somethinginit"><br><h1>绵星工作室</h1>
+        <p>主页仍在制作，非常抱歉给您带来不便</p></div></center>
+        <!--页脚-->
+        <footer>
+            <br>
+            <p>Calvin-star Studio</p>
+            <p>页面由Github托管</p>
+            <p>！：非盈利性组织</p>
+            <br>
+        </footer>
+</html>
