--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>欢迎来到Calvin-star！</title>
         <link rel="stylesheet" type="text/css" href="pagestyle.css">
+        <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
         <script src="pgjs.js"></script>
     </head>
     <body>
@@ -21,7 +22,9 @@
             <br>
         </div></center>
         <center><div id="somethinginit"><br><h1>绵星工作室</h1>
-        <p>主页仍在制作，非常抱歉给您带来不便</p></div></center>
+        <p>主页仍在制作，非常抱歉给您带来不便</p>
+        <p>加入我们 Discord：https://discord.gg/AR42abvYRz <i class="fa fa-qq" aria-hidden="true"></i>Q群：715837030</p>
+        </div></center>
         <!--页脚-->
         <footer>
             <br>
