--- a/index.html
+++ b/index.html
@@ -18,13 +18,31 @@
         <center><div id="type">
             <br>
             <h1>Calvin-star Studio</h1>
-            <p>Minecraft工作室</p>
             <br>
         </div></center>
-        <center><div id="somethinginit"><br><h1>绵星工作室</h1>
-        <p>主页仍在制作，非常抱歉给您带来不便</p>
-        <p>加入我们 Discord：https://discord.gg/AR42abvYRz <i class="fa fa-qq" aria-hidden="true"></i>Q群：715837030</p>
-        </div></center>
+        <center>
+            <div id="somethinginit">
+            <br>
+            <h1>绵星工作室</h1>
+            <p>“绵星”是我们工作室的中文名</p>
+            <p>加入我们 Discord：https://discord.gg/AR42abvYRz <i class="fa fa-qq" aria-hidden="true"></i>Q群：715837030</p>
+            </div>
+        </center>
+        <center>
+            <div id="somethinginit2">
+                <br>
+                <h1>关于我们</h1>
+                <p>我们致力于打造优秀的整合包，MC地图，开源软件等</p>
+                <p>欢迎加入我们！</p>
+                <a id="whitea" href="https://space.bilibili.com/2100646792/"><i class="fa fa-chain">哔哩哔哩官方号</i></a></div></center>
+        <center>
+            <div id="somethinginit3">
+                <br>
+                <h1>成员们的联系方式：</h1>
+                <p>Chatting on QQ<i class="fa fa-qq"></i></p>
+                <p>@辰羊-SL QQ：1293380947</p>
+                <p>@一叶知秋是BAKA QQ：444262771</p>
+                <p>@死酱- QQ：1707831851</p></div></center>
         <!--页脚-->
         <footer>
             <br>
