--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
     <body>
         <!--导航栏-->
         <ul>
-            <li><a href="/index.html">主页</a></li>
+            <li><a href="index.html">主页</a></li>
             <li><a href="#news">新闻</a></li>
         </ul>
         <!--内容-->
