new page "shortblog"

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="#home">主页</a></li>
             <li><a href="news.html">新闻</a></li>
+            <li><a href="shortblog.html">短记</a></li>
         </ul>
         <!--内容-->
         <center><div id="type">
@@ -52,3 +53,17 @@
             <br>
         </footer>
 </html>
+
+<!--<!DOCTYPE html>
+<html>
+<head><link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css"></head>
+<body><center><i class="fa fa-github" style=font-size:140px></i>
+<p>Github</p>
+<p style=font-size:5px;color:gray>github.com</p></center></body>
+</html>-->
+<!--事小彩蛋！ https://bugteas.github.io/nugget_speens_h5/ 万物皆可转-->
+
+<!--当你得到这个页面的时候，你会发现他没有注释，哈哈哈哈哈哈哈哈哈哈哈，我已经透过
+屏幕看到你抓狂的样子了红红火火恍恍惚惚-->
+
+<!--2022/12/23-->
