--- a/readers/reader001.html
+++ b/readers/reader001.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>欢迎来到Calvin-star！</title>
+        <title>文章阅读器</title>
         <link rel="stylesheet" type="text/css" href="../pagestyle.css">
         <script src="pgjs.js"></script>
     </head>
@@ -12,12 +12,13 @@
         <ul>
             <li><a href="../index.html">主页</a></li>
             <li><a href="../news.html">新闻</a></li>
+            <li><a href="../shortblog.html">短记</a></li>
         </ul>
         <!--内容-->
         <div id="type">
             <br>
             <h1>文章阅读</h1>
-            <p>主页>>新闻>>HTML阅读器</p>
+            <p>主页>>新闻>>HTML阅读器 <a href="../words/word001.html">沉浸式阅读</a></p>
             <br>
         </div>
         
