--- a/shortblog.html
+++ b/shortblog.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Calvin-star News</title>
+        <title>短记——短博客</title>
         <link rel="stylesheet" type="text/css" href="pagestyle.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
         <script src="pgjs.js"></script>
@@ -12,21 +12,24 @@
         <!--导航栏-->
         <ul>
             <li><a href="index.html">主页</a></li>
-            <li><a href="#news">新闻</a></li>
-            <li><a href="shortblog.html">短记</a></li>
+            <li><a href="news.html">新闻</a></li>
+            <li><a href="#shortblog">短记</a></li>
         </ul>
         <!--内容-->
-        <div id="type"><br><h1>新闻</h1><p>关于Calvin-star的最新情报</p><br></div>
-        <div id="butt" href="#">
-            <a id="butta" href="readers/reader001.html"><i class="fa fa-file-text-o"></i>绵星工作室今日正式成立！</a>
-            <p>2022 12/10</p>
+        <div id="shobtype">
+            <br>
+            <h1>短记</h1>
+            <p>这里放一些杂七杂八的东西</p>
+            <br>
         </div>
         <br>
-        <ul class="pagination">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">»</a></li>
-        </ul>
+        <div id="shortblog">
+            <h2>第一篇短记！</h2>
+            <p>好耶！事新功能</p>
+            <p>---</p>
+            <p style="color:grey">2022/12/23 17：15</p>
+        </div>
+        <br>
         <!--页脚-->
         <footer>
             <br>
