--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="titleimg.jpg">
         <title>欢迎来到Calvin-star！</title>
         <link rel="stylesheet" type="text/css" href="pagestyle.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
