--- a/news.html
+++ b/news.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="titleimg.jpg">
         <title>Calvin-star News</title>
         <link rel="stylesheet" type="text/css" href="pagestyle.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
@@ -17,6 +18,11 @@
         </ul>
         <!--内容-->
         <div id="type"><br><h1>新闻</h1><p>关于Calvin-star的最新情报</p><br></div>
+        <div id="butt" href="#">
+            <a id="butta" href="readers/reader002.html"><i class="fa fa-file-text-o"></i>辰羊视频新进展！</a>
+            <p>2022 12/26</p>
+        </div>
+        <br>
         <div id="butt" href="#">
             <a id="butta" href="readers/reader001.html"><i class="fa fa-file-text-o"></i>绵星工作室今日正式成立！</a>
             <p>2022 12/10</p>
