--- a/shortblog.html
+++ b/shortblog.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="titleimg.jpg">
         <title>短记——短博客</title>
         <link rel="stylesheet" type="text/css" href="pagestyle.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
@@ -24,8 +25,24 @@
         </div>
         <br>
         <div id="shortblog">
+            <h2>好耶</h2>
+            <p>事大制作！！！</p>
+            <iframe src="https://player.bilibili.com/player.html?aid=989303931&bvid=BV1X44y1o7H4&cid=937937172&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" height="450px" width="600px"> </iframe>
+            <p>---</p>
+            <p style="color:grey">2022/12/23 17：15</p>
+        </div>
+        <br>
+        <div id="shortblog">
+            <h2>一起跨年！</h2>
+            <p><del>除了跨年，还有咕咕咕</del></p>
+            <p>---</p>
+            <p style="color:grey">2022/12/26 16：00</p>
+        </div>
+        <br>
+        <div id="shortblog">
             <h2>第一篇短记！</h2>
             <p>好耶！事新功能</p>
+            <iframe src="https://player.bilibili.com/player.html?aid=80433022&bvid=BV1GJ411x7h7&cid=137649199&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" height="450px" width="600px"> </iframe>
             <p>---</p>
             <p style="color:grey">2022/12/23 17：15</p>
         </div>
