fix some bugs，add 404.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 </html>-->
 <!--事小彩蛋！ https://bugteas.github.io/nugget_speens_h5/ 万物皆可转-->
 
-<!--当你得到这个页面的时候，你会发现他没有注释，哈哈哈哈哈哈哈哈哈哈哈，我已经透过
-屏幕看到你抓狂的样子了红红火火恍恍惚惚-->
+<!--当你得到这个页面的时候，你会发现他没有注释，哈哈哈哈哈哈哈哈哈哈哈，我已经透过屏幕看到你抓狂的样子了红红火火恍恍惚惚-->
 
 <!--2022/12/23-->
