又是我的问题

--- a/shortblog.html
+++ b/shortblog.html
@@ -29,7 +29,7 @@
             <p>事大制作！！！</p>
             <iframe src="https://player.bilibili.com/player.html?aid=989303931&bvid=BV1X44y1o7H4&cid=937937172&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" height="450px" width="600px"> </iframe>
             <p>---</p>
-            <p style="color:grey">2022/12/23 17：15</p>
+            <p style="color:grey">2022/12/28 14:00</p>
         </div>
         <br>
         <div id="shortblog">
