--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="somethinginit">
             <br>
             <h1>绵星工作室</h1>
+            <img src="https://badges.toozhao.com/badges/01GPBQ04N6BDJP3GAE4CTJG6M3/green.svg" />
             <p>“绵星”是我们工作室的中文名</p>
             <p>加入我们 Discord：https://discord.gg/AR42abvYRz <i class="fa fa-qq" aria-hidden="true"></i>Q群：715837030</p>
             </div>
