哇哇哇哇哇哇哇
啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             </div>
         </center>
         <center>
+            <div id="bilibili">
+            <br>
+            <h1>我们的BILIBILI!</h1>
+            <p>下方链接可点！</p>
+            <a id="whitea" href="https://space.bilibili.com/1985849006"><i class="fa fa-chain"></i></i>@辰羊-SL</a>
+            <a id="whitea" href="https://space.bilibili.com/631508826"><i class="fa fa-chain"></i>@一叶知秋是BAKA</a>
+            <a id="whitea" href="https://space.bilibili.com/696660555"><i class="fa fa-chain"></i>@死酱-</a>
+            </div>
+        </center>
+        <center>
             <div id="somethinginit2">
                 <br>
                 <h1>关于我们</h1>
