--- a/shortblog.html
+++ b/shortblog.html
@@ -25,6 +25,21 @@
         </div>
         <br>
         <div id="shortblog">
+            <h2>辰羊居然水视频！！！</h2>
+            <del><p>太过分了，必须公开处刑（）</p></del>
+            <iframe src="https://player.bilibili.com/player.html?aid=819857687&bvid=BV1aG4y1L74n&cid=953590357&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+            <p>---</p>
+            <p style="color:grey">2022/12/23 17：15</p>
+        </div>
+        <br>
+        <div id="shortblog">
+            <h2>工作室现在啥事也没有</h2>
+            <p>此站暂时放置工作室内成员们的作品</p>
+            <p>---</p>
+            <p style="color:grey">2023/1/10 1:19</p>
+        </div>
+        <br>
+        <div id="shortblog">
             <h2>好耶</h2>
             <p>事大制作！！！</p>
             <iframe src="https://player.bilibili.com/player.html?aid=989303931&bvid=BV1X44y1o7H4&cid=937937172&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" height="450px" width="600px"> </iframe>
