--- a/avium/bp2a/index.html
+++ b/avium/bp2a/index.html
@@ -11,7 +11,7 @@
         <p>您可以选择不同的设备查看</p>
         <p>设备列表：</p>
         <ul>
-            <li><a href="./devices/marble.html">Redmi Note 12 Turbo | POCO F5 （marble）</a></li>
+            <li><a href="./devices/marble/index.html">Redmi Note 12 Turbo | POCO F5 （marble）</a></li>
         </ul>
 
 </body>
