--- a/avium/bp2a/devices/marble/index.html
+++ b/avium/bp2a/devices/marble/index.html
@@ -6,20 +6,21 @@
     </head>
     <body>
 
-        <h1>AviumUI 16 Unofficial for Redmi Note 12 Turbo | POCO F5 (marble)</h1>
+        <h1>AviumUI 16 Unofficial</h1> 
+        <h2><i>for Redmi Note 12 Turbo | POCO F5 (marble)</i></h2>
         <p>A16|marble|user|release-key|GMS|Unofficial</p>
         <p>Build by BAKA_9</p>
         <i>以下为版本更新信息</i>
         <hr>
 
-        <h2>注意！</h2>
+        <h3>注意！</h3>
         <p>之后的版本将会构建<b>release-key</b>版本，此前test key版本将不会收到ota更新，若要更新至最新版本，请<b>手动刷入并清除数据！</b>否则会出现<b>刷入后无法开机的情况！</b></p>
 
-        <h3>20260115</h3>
+        <h4>20260115</h4>
         <ul>
             <li>设置TARGET_ENABLE_BLUR为true</li>
         </ul>
-        <h3>20260114</h3>
+        <h4>20260114</h4>
         <ul>
             <li>更换eng为user</li>
             <li>同步了AviumUI的最新源码，支持人脸识别</li>
