--- a/avium/bp2a/devices/marble/index.html
+++ b/avium/bp2a/devices/marble/index.html
@@ -13,6 +13,11 @@
         <i>以下为版本更新信息</i>
         <hr>
 
+        <h4>20260122</h4>
+        <ul>
+            <li>同步编译最新源码</li>
+        </ul>
+
         <h3>注意！</h3>
         <p>之后的版本将会构建<b>release-key</b>版本，此前test key版本将不会收到ota更新，若要更新至最新版本，请<b>手动刷入并清除数据！</b>否则会出现<b>刷入后无法开机的情况！</b></p>
 
