--- a/avium/bp2a/devices/marble/index.html
+++ b/avium/bp2a/devices/marble/index.html
@@ -13,6 +13,16 @@
         <i>以下为版本更新信息</i>
         <hr>
 
+        <h4>20260130</h4>
+        <ul>
+            <li>同步编译最新源码</li>
+        </ul>
+
+        <h4>20260124</h4>
+        <ul>
+            <li>同步编译最新源码，同步上游修复了人脸问题</li>
+        </ul>
+
         <h4>20260122</h4>
         <ul>
             <li>同步编译最新源码</li>
