--- a/avium/bp2a/devices/marble/index.html
+++ b/avium/bp2a/devices/marble/index.html
@@ -9,6 +9,7 @@
         <h1>AviumUI 16 Unofficial</h1> 
         <h2><i>for Redmi Note 12 Turbo | POCO F5 (marble)</i></h2>
         <p>A16|marble|user|release-key|GMS|Unofficial</p>
+        <p>GMS类型：mini</p>
         <p>Build by BAKA_9</p>
         <i>以下为版本更新信息</i>
         <hr>
